[package]
name = "websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
actix = "0.13.5"
actix-web-actors = "4.3.1"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["sync"] }
uuid = { version = "1.19.0", features = ["v4"] }
serde_json = "1.0.149"
sqlx = { version = "0.9.0-alpha.1",features = ["postgres", "runtime-tokio", "macros"]  }
dotenvy = "0.15.7"


serde_yaml = "0.9.1"


# 加密
argon2 = "0.5.3"
password-hash = "0.5.0"
rand_core = "0.9.5"
futures="0.3.31"

redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.13.1", features = ["blocking", "json"] }

log = "0.4.29"